tests/reference/asr-class_procedure_extra_args-543ebdc.stderr
semantic error: More actual than formal arguments in procedure call
  --> tests/errors/class_procedure_extra_args.f90:30:33
   |
30 |     call myCircle%calculateArea(circleArea, 12)
   |                                 ^^^^^^^^^^^^^^ 
